--- a/project-tourists/src/main/webapp/inboxpageStyle.css
+++ b/project-tourists/src/main/webapp/inboxpageStyle.css
@@ -49,6 +49,15 @@ h2 {
     font-weight: bold;
 }
 
+.profilepicture{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 auto;
+    display: block;
+}
+
 .friendbox:hover, .friend-request-box:hover, .challenge-box:hover {
     background-color: #5454ea;
 }
@@ -198,3 +207,5 @@ chat-window::-webkit-scrollbar-track {
 .container > .challenges::-webkit-scrollbar-thumb:hover {
     background-color: #3a3a5f;
 }
+
+
