--- a/project-tourists/src/main/webapp/inboxpageStyle.css
+++ b/project-tourists/src/main/webapp/inboxpageStyle.css
@@ -49,6 +49,10 @@ h2 {
     font-weight: bold;
 }
 
+.friendbox{
+    padding: 7px;
+}
+
 .profilepicture{
     width: 50px;
     height: 50px;
@@ -150,10 +154,10 @@ chat-window::-webkit-scrollbar-track {
 
 .other-text {
     text-align: left;
-    color: #f5f6f7;
+    color: #000000;
     padding: 5px;
     margin: 5px 0;
-    background-color: #2a2a4f;
+    background-color: #69a9e8;
     border-radius: 5px;
 }
 
