--- a/project-tourists/src/main/webapp/UserStyle.css
+++ b/project-tourists/src/main/webapp/UserStyle.css
@@ -18,7 +18,6 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
     background-color: #1B1B32;
 }
 
@@ -43,24 +42,24 @@ legend {
 }
 
 
-/* Header Buttons */
-.homepage-button {
-    display: inline-block;
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #fff;
-    background-color: #0A0A23;
-    border: none;
-    border-radius: 50px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 0.3s;
-    position: absolute;
-    top: 5px;
-    left: 10px;
-}
+/*!* Header Buttons *!*/
+/*.homepage-button {*/
+/*    display: inline-block;*/
+/*    margin: 10px;*/
+/*    padding: 10px 20px;*/
+/*    font-size: 1.2em;*/
+/*    font-weight: bold;*/
+/*    color: #fff;*/
+/*    background-color: #0A0A23;*/
+/*    border: none;*/
+/*    border-radius: 50px;*/
+/*    text-align: center;*/
+/*    text-decoration: none;*/
+/*    transition: background-color 0.3s;*/
+/*    position: absolute;*/
+/*    top: 5px;*/
+/*    left: 10px;*/
+/*}*/
 
 .UserProfile {
     top: 80px;
@@ -329,13 +328,11 @@ legend {
     text-decoration: none;
     color: white;
     font-weight: bold;
-}
-.friends-list span{
-    position: relative;
     top:-18px;
     left:-5px;
     font-size:1.3em;
 }
+
 .friends-list a:hover {
     text-decoration: none;
     color: #3A3A5F;
