--- a/project-tourists/src/main/webapp/inboxpageStyle.css
+++ b/project-tourists/src/main/webapp/inboxpageStyle.css
@@ -1,8 +1,10 @@
 
 body {
+    padding-top: 0px;
     width: 100%;
     height: 100vh;
     margin: 0;
+    margin-top: -30px;
     background-color: #1b1b32;
     color: #f5f6f7;
     font-family: Tahoma, sans-serif;
@@ -16,7 +18,7 @@ body {
 .container {
     display: grid;
     width: 95%;
-    height: 95%;
+    height: 85%;
     grid-template-columns: 1fr 3fr 1fr 1fr;
 }
 
