--- a/project-tourists/src/main/webapp/inboxpageStyle.css
+++ b/project-tourists/src/main/webapp/inboxpageStyle.css
@@ -1,4 +1,5 @@
 
+
 body {
     padding-top: 0px;
     width: 100%;
@@ -40,36 +41,62 @@ h2 {
     text-align: center;
 }
 
-.friendbox, .friend-request-box, .challenge-box {
+.friendboxbig {
+    display: flex;
+    align-items: center;
     padding: 10px;
     margin: 5px 0;
+    margin-right: -10px;
     background-color: #3a3a5f;
-    border-radius: 5px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    text-align: center;
-    font-weight: bold;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    /*width: 90%;*/
 }
 
-.friendbox{
-    padding: 7px;
+.friendboxbig:hover {
+    background-color: #5454ea;
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
-.profilepicture{
+.profilepicture {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
-    margin: 0 auto;
+    transition: transform 0.3s ease;
+}
+
+.friendboxbig:hover .profilepicture {
+    transform: scale(1.1);
+}
+
+.friendbox {
+    flex-grow: 1;
+    padding: 10px;
+    margin-left: -10px;
+    color: #f5f6f7;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
     display: block;
+    /*margin: auto;*/
+    max-width: 45%;
+    word-wrap: break-word;
+}
+
+
+
+.friendboxbig:hover .friendbox {
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .friendbox:hover, .friend-request-box:hover, .challenge-box:hover {
     background-color: #5454ea;
-}
-
-.friendbox {
-    color: #f5f6f7;
 }
 
 .chat-window {
@@ -163,12 +190,23 @@ chat-window::-webkit-scrollbar-track {
     border-radius: 5px;
 }
 
+.friend-request-box, .challenge-box {
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #3a3a5f;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    text-align: center;
+    font-weight: bold;
+}
+
 .friend-requests button, .challenge-box button {
     margin: 0 5px;
     padding: 5px 10px;
     border: none;
     border-radius: 5px;
-    background-color: #5454ea;
+    background-color: #8686f6;
     color: #f5f6f7;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -178,9 +216,8 @@ chat-window::-webkit-scrollbar-track {
     background-color: #2a2a4f;
 }
 
-
 .container > .friends-list,
-.container > .friendrequests,
+.container > .friend-requests,
 .container > .challenges {
     overflow-y: auto;
     scrollbar-width: thin;
@@ -213,5 +250,3 @@ chat-window::-webkit-scrollbar-track {
 .container > .challenges::-webkit-scrollbar-thumb:hover {
     background-color: #3a3a5f;
 }
-
-
