--- a/project-tourists/src/main/webapp/quizzespageStyle.css
+++ b/project-tourists/src/main/webapp/quizzespageStyle.css
@@ -174,82 +174,82 @@ body {
     background-color: #2a2a4f;
 }
 
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
+/*@media (max-width: 768px) {*/
+/*    .container {*/
+/*        flex-direction: column;*/
+/*    }*/
 
-    .filters {
-        width: 100%;
-        margin: 0;
-        margin-bottom: 20px;
-        max-height: calc(100vh - 200px);
-        overflow-y: auto;
-        scrollbar-width: thin;
-        scrollbar-color: #3a3a5f #1b1b32;
-    }
+/*    .filters {*/
+/*        width: 100%;*/
+/*        margin: 0;*/
+/*        margin-bottom: 20px;*/
+/*        max-height: calc(100vh - 200px);*/
+/*        overflow-y: auto;*/
+/*        scrollbar-width: thin;*/
+/*        scrollbar-color: #3a3a5f #1b1b32;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar {
-        width: 12px;
-    }
+/*    .filters::-webkit-scrollbar {*/
+/*        width: 12px;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar-track {
-        background: #1b1b32;
-        border-radius: 10px;
-    }
+/*    .filters::-webkit-scrollbar-track {*/
+/*        background: #1b1b32;*/
+/*        border-radius: 10px;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar-thumb {
-        background-color: #3a3a5f;
-        border-radius: 10px;
-        border: 3px solid #1b1b32;
-    }
+/*    .filters::-webkit-scrollbar-thumb {*/
+/*        background-color: #3a3a5f;*/
+/*        border-radius: 10px;*/
+/*        border: 3px solid #1b1b32;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar-thumb:hover {
-        background-color: #2a2a4f;
-    }
+/*    .filters::-webkit-scrollbar-thumb:hover {*/
+/*        background-color: #2a2a4f;*/
+/*    }*/
 
-    .quiztable {
-        width: 100%;
-        overflow-x: auto;
-    }
-}
+/*    .quiztable {*/
+/*        width: 100%;*/
+/*        overflow-x: auto;*/
+/*    }*/
+/*}*/
 
-@media (max-height: 600px) {
-    .container {
-        flex-direction: column;
-    }
+/*@media (max-height: 600px) {*/
+/*    .container {*/
+/*        flex-direction: column;*/
+/*    }*/
 
-    .filters {
-        width: 100%;
-        margin: 0;
-        margin-bottom: 20px;
-        max-height: calc(100vh - 200px);
-        overflow-y: auto;
-        scrollbar-width: thin;
-        scrollbar-color: #3a3a5f #1b1b32;
-    }
+/*    .filters {*/
+/*        width: 100%;*/
+/*        margin: 0;*/
+/*        margin-bottom: 20px;*/
+/*        max-height: calc(100vh - 200px);*/
+/*        overflow-y: auto;*/
+/*        scrollbar-width: thin;*/
+/*        scrollbar-color: #3a3a5f #1b1b32;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar {
-        width: 12px;
-    }
+/*    .filters::-webkit-scrollbar {*/
+/*        width: 12px;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar-track {
-        background: #1b1b32;
-        border-radius: 10px;
-    }
+/*    .filters::-webkit-scrollbar-track {*/
+/*        background: #1b1b32;*/
+/*        border-radius: 10px;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar-thumb {
-        background-color: #3a3a5f;
-        border-radius: 10px;
-        border: 3px solid #1b1b32;
-    }
+/*    .filters::-webkit-scrollbar-thumb {*/
+/*        background-color: #3a3a5f;*/
+/*        border-radius: 10px;*/
+/*        border: 3px solid #1b1b32;*/
+/*    }*/
 
-    .filters::-webkit-scrollbar-thumb:hover {
-        background-color: #2a2a4f;
-    }
+/*    .filters::-webkit-scrollbar-thumb:hover {*/
+/*        background-color: #2a2a4f;*/
+/*    }*/
 
-    .quiztable {
-        width: 100%;
-        overflow-x: auto;
-    }
-}
+/*    .quiztable {*/
+/*        width: 100%;*/
+/*        overflow-x: auto;*/
+/*    }*/
+/*}*/
