--- a/project-tourists/src/main/webapp/topBarStyle.css
+++ b/project-tourists/src/main/webapp/topBarStyle.css
@@ -44,3 +44,43 @@ body{
     background-color: #2D2D4B;
     z-index: 1000;
 }
+
+
+.search-container {
+    position: fixed;
+    top: 1px;
+    left:250px;
+    width: 300px;
+    margin: 20px auto;
+    z-index: 1100;
+}
+
+#search-bar {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#search-results {
+    position: absolute;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    max-height: 200px;
+    overflow-y: auto;
+    display: none;
+}
+
+#search-results a {
+    display: block;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-decoration: none;
+    color: #333;
+}
+
+#search-results a:hover {
+    background-color: #f1f1f1;
+}
