--- a/project-tourists/src/main/webapp/quizzespageStyle.css
+++ b/project-tourists/src/main/webapp/quizzespageStyle.css
@@ -10,6 +10,7 @@ body {
     overflow: hidden;
 }
 
+
 .header h1 {
     padding-top: 1em;
     text-align: center;
@@ -174,84 +175,21 @@ body {
     background-color: #2a2a4f;
 }
 
+.removequizbutton {
+    background-color: #ff4c4c;
+    color: white;
+    font-size: 12px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 10px;
+}
 
-/*@media (max-width: 768px) {*/
-/*    .container {*/
-/*        flex-direction: column;*/
-/*    }*/
+.removequizbutton:hover {
+    background-color: #cc0000;
+}
 
-/*    .filters {*/
-/*        width: 100%;*/
-/*        margin: 0;*/
-/*        margin-bottom: 20px;*/
-/*        max-height: calc(100vh - 200px);*/
-/*        overflow-y: auto;*/
-/*        scrollbar-width: thin;*/
-/*        scrollbar-color: #3a3a5f #1b1b32;*/
-/*    }*/
 
-/*    .filters::-webkit-scrollbar {*/
-/*        width: 12px;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar-track {*/
-/*        background: #1b1b32;*/
-/*        border-radius: 10px;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar-thumb {*/
-/*        background-color: #3a3a5f;*/
-/*        border-radius: 10px;*/
-/*        border: 3px solid #1b1b32;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar-thumb:hover {*/
-/*        background-color: #2a2a4f;*/
-/*    }*/
-
-/*    .quiztable {*/
-/*        width: 100%;*/
-/*        overflow-x: auto;*/
-/*    }*/
-/*}*/
-
-/*@media (max-height: 600px) {*/
-/*    .container {*/
-/*        flex-direction: column;*/
-/*    }*/
-
-/*    .filters {*/
-/*        width: 100%;*/
-/*        margin: 0;*/
-/*        margin-bottom: 20px;*/
-/*        max-height: calc(100vh - 200px);*/
-/*        overflow-y: auto;*/
-/*        scrollbar-width: thin;*/
-/*        scrollbar-color: #3a3a5f #1b1b32;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar {*/
-/*        width: 12px;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar-track {*/
-/*        background: #1b1b32;*/
-/*        border-radius: 10px;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar-thumb {*/
-/*        background-color: #3a3a5f;*/
-/*        border-radius: 10px;*/
-/*        border: 3px solid #1b1b32;*/
-/*    }*/
-
-/*    .filters::-webkit-scrollbar-thumb:hover {*/
-/*        background-color: #2a2a4f;*/
-/*    }*/
-
-/*    .quiztable {*/
-/*        width: 100%;*/
-/*        overflow-x: auto;*/
-/*    }*/
-/*}*/
 
