--- a/project-tourists/src/main/webapp/createQuizzesStyle.css
+++ b/project-tourists/src/main/webapp/createQuizzesStyle.css
@@ -8,7 +8,11 @@ body{
     font-size: 16px;
 }
 
-
+.banUserH1{
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: -20px;
+}
 
 form {
     width: 60vw;
