--- a/project-tourists/src/main/webapp/UserStyle.css
+++ b/project-tourists/src/main/webapp/UserStyle.css
@@ -1,4 +1,3 @@
-/* Basic Reset */
 * {
     margin: 0;
     padding: 0;
@@ -365,13 +364,44 @@ legend {
     width:120%;
     align-self:center;
     justify-self:center;
-    tranform:translate(10px);
     position:relative;
     left:-5px;
     height:100%;
     cursor:pointer;
 }
-
+.demote-button{
+    background:transparent;
+    color:white;
+    width:120%;
+    align-self:center;
+    justify-self:center;
+    position:relative;
+    left:-5px;
+    height:100%;
+    cursor:pointer;
+}
+.delete-button{
+    background:transparent;
+    color:white;
+    width:120%;
+    align-self:center;
+    justify-self:center;
+    position:relative;
+    left:-5px;
+    height:100%;
+    cursor:pointer;
+}
+.ban-button{
+    background:transparent;
+    color:white;
+    width:120%;
+    align-self:center;
+    justify-self:center;
+    position:relative;
+    left:-5px;
+    height:100%;
+    cursor:pointer;
+}
 .admin-buttons form:hover{
     background-color: #3A3A5F;
 }
