added Logout, fixed style of create Quizzes

--- a/project-tourists/src/main/webapp/chooseQuestionStyle.css
+++ b/project-tourists/src/main/webapp/chooseQuestionStyle.css
@@ -32,7 +32,8 @@ fieldset{
 
 
 
-input[type="submit"] {
+input[class = "questionButton"],
+input[class = "finishButton"]{
     flex: 1;
     margin: 5px;
     padding: 20px;
