--- a/project-tourists/src/main/webapp/topBarStyle.css
+++ b/project-tourists/src/main/webapp/topBarStyle.css
@@ -32,6 +32,29 @@ body{
     margin-top: 10px;
 }
 
+.topBarSubmitForm{
+    display: inline-block;
+    float:right;
+    margin-bottom: 0px;
+}
+
+.topBarSubmitButton{
+    width: 100px;
+    height: 40px;
+    background-color: #ff4c4c;
+    color: #f5f6f7;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.topBarSubmitButton:hover{
+    background-color: #cc0000;
+}
 
 .topbar{
     position: fixed;
