--- a/project-tourists/src/main/webapp/UserStyle.css
+++ b/project-tourists/src/main/webapp/UserStyle.css
@@ -4,16 +4,7 @@
     box-sizing: border-box;
 }
 
-.topLine{
-    left:0;
-    top:0;
-    width: 100%;
-    height: 70px;
-    background-color: #2D2D4B;
-    position: absolute;
-}
 
-/* Body Styling */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -40,40 +31,20 @@ legend {
     border: none;
 }
 
-
-/*!* Header Buttons *!*/
-/*.homepage-button {*/
-/*    display: inline-block;*/
-/*    margin: 10px;*/
-/*    padding: 10px 20px;*/
-/*    font-size: 1.2em;*/
-/*    font-weight: bold;*/
-/*    color: #fff;*/
-/*    background-color: #0A0A23;*/
-/*    border: none;*/
-/*    border-radius: 50px;*/
-/*    text-align: center;*/
-/*    text-decoration: none;*/
-/*    transition: background-color 0.3s;*/
-/*    position: absolute;*/
-/*    top: 5px;*/
-/*    left: 10px;*/
-/*}*/
-
 .UserProfile {
-    top: 80px;
-    left: 20px;
-    width: 150px;
-    height: 150px;
+    padding-top: 5px;
+    left: 1%;
+    width: 10%;
+    height: 20%;
     border-radius: 50%;
     position: absolute;
 }
 
 .UserName {
-    top: 80px;
-    left: 190px;
+    padding-top: 22px;
+    left: 12%;
     color: white;
-    font-size: 3em;
+    font-size: calc(2.5vw + 2.5vh);
     font-weight: bold;
     position: absolute;
 }
@@ -96,27 +67,15 @@ legend {
     position: absolute;
 }
 
-.logout-button {
-    display: inline-block;
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #fff;
-    background-color: #0A0A23;
-    border: none;
-    border-radius: 50px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 0.3s;
-    position: absolute;
-    top: 10px;
-    right: 20px;
+.unfriend-button:hover{
+    background-color: #3A3A5F;
+    cursor: pointer;
 }
-
-.Userpage-button {
-    display: inline-block;
-    margin: 10px;
+.unfriend-button.clicked{
+    background-color: white;
+    color: #0A0A23
+}
+.logout-button {
     padding: 10px 20px;
     font-size: 1.2em;
     font-weight: bold;
@@ -128,43 +87,48 @@ legend {
     text-decoration: none;
     transition: background-color 0.3s;
     position: absolute;
-    top: 10px;
-    right: 20px;
+    margin-top: 50px;
+    width: 100%;
+    left: 20px;
 }
 
 
 .ProblemsSolved {
     width: 40%;
+    height: 25%;
     text-align: center;
+    align-items: center;
     margin-bottom: 20px;
     left: 30%;
-    top: 80px;
+    margin-top: 25px;
     position: absolute;
     padding: 20px;
     background-color: #3A3A5F;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
 }
 
 .ProblemsSolved h1 {
-    font-size: 2.5em;
+    font-size: 2.5vw;
     color: #ccc;
     margin-bottom: 10px;
 }
 
 .ProblemsSolved .Number {
     font-weight: bold;
-    font-size: 3em;
+    font-size: calc(5vw + 5vh);
 }
 
 .ProblemsSolved .Text {
-    font-size: 1.5em;
+    font-size: calc(3vw + 3vh);
     color: white;
 }
 
 .profilePictureChangeLabel {
-    font-size: 1.2em;
+    font-size: 1.2vw;
     font-weight: bold;
     color: white;
 }
@@ -173,22 +137,27 @@ legend {
     width: 50px;
 }
 .profilePictureUploadUrl{
-    font-size: 1.2em;
+    font-size: 1.2vw;
 }
 .PictureUploadButton{
-    width: 100px;
-    height: 30px;
+    width: 40%;
+    height: 100%;
     color:white;
     border-radius: 15px;
     background-color: #0A0A23;
 }
 
+.PictureUploadButton:hover{
+    cursor:pointer;
+    background-color: #3A3A5F;
+}
+
 .PictureUpload {
     position: absolute;
     color: white;
-    top: 160px;
-    left: 190px;
-    font-size: 0.8em;
+    top: 25%;
+    left: 12%;
+    font-size: 1.2vw;
 }
 
 
@@ -199,10 +168,10 @@ legend {
     padding: 20px 0 20px 20px;
     width: calc(100% - 40px);
     margin: 0 auto;
-    top: 275px;
+    top: 40%;
     position: absolute;
     background-color: #1B1B32;
-    height: 300px;
+    height: 60%;
 }
 
 .left{
@@ -262,6 +231,31 @@ legend {
     padding: 2px;
 }
 
+.achievements-list li {
+    position: relative;
+    display: inline-block;
+    margin: 10px;
+}
+
+.achievement-tooltip {
+    display: none;
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 10;
+    font-size: 0.9em
+}
+
+.achievements-list li:hover .achievement-tooltip {
+    display: block;
+}
+
 .button-container {
     display: flex;
     justify-content: center;
@@ -279,6 +273,9 @@ legend {
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
+}
+.button-container button:hover{
+    background-color: #3A3A5F;
 }
 
 
@@ -316,7 +313,7 @@ legend {
     align-items: center;
 }
 
-.friends-list img {
+.friends-list img,.achievements-list img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -331,7 +328,10 @@ legend {
     left:-5px;
     font-size:1.3em;
 }
-
+.FriendUserName{
+    position: relative;
+    top:-18px;
+}
 .friends-list a:hover {
     text-decoration: none;
     color: #3A3A5F;
