--- a/project-tourists/src/main/webapp/chooseQuestionStyle.css
+++ b/project-tourists/src/main/webapp/chooseQuestionStyle.css
@@ -15,6 +15,7 @@ h1{
 
 fieldset{
     width: 600px;
+    height: 300px;
     margin-right: auto;
     margin-left: auto;
     padding: 20px;
@@ -23,26 +24,16 @@ fieldset{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.editQuizFieldSet{
-    max-height: 200px;
-    padding-bottom: 35px;
-    padding-right: 8px;
-}
-
 .firstLine, .secondLine {
     display: flex;
     width: 100%;
     height: 50%;
 }
 
-.editQuizFirstLine{
-    height: 100%;
-}
-
 
 
 input[class = "questionButton"],
-input[class = "finishButton"],input[class= "editButton"]{
+input[class = "finishButton"]{
     flex: 1;
     margin: 5px;
     padding: 20px;
@@ -55,12 +46,6 @@ input[class = "finishButton"],input[class= "editButton"]{
     transition: background-color 0.3s ease;
 }
 
-input[class = "editButton"]{
-    height: 100%;
-    width: 47%;
-    font-size: 22px;
-}
-
 input[class="finishButton"]{
     display: block;
     margin: 10px auto;
@@ -68,4 +53,3 @@ input[class="finishButton"]{
     padding-right: 50px;
     background-color: #0a0a23;
 }
-
