--- a/project-tourists/src/main/webapp/mystyle1.css
+++ b/project-tourists/src/main/webapp/mystyle1.css
@@ -239,3 +239,23 @@ li{
     /*width: 50vw;*/
     /*width: 100px;*/
 }
+.aboutuscontainer{
+    width: 50vw;
+    margin-top: 15vh;
+}
+.aboutusdiv {
+    background: var(--color4);
+    border-radius: 2rem;
+}
+
+.aboutush1{
+    padding-top: 1rem;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    border-bottom: 2px solid white;
+}
+.aboutusp{
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-bottom: 1rem;
+}
